--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,22 +1,8 @@
-  <div>
-    <form action="/test" method="post">
-      <h3>
-        サンプルフォーム
-      </h3>
-      <div>
-        <label>Name:</label>
-        <input placeholder="Name" type="text" id="name">
-      </div>
-      <div>
-        <label>E-mail:</label>
-        <input placeholder="E-mail" type="email" id="mail">
-      </div>
-      <div>
-        <label>Message:</label>
-        <textarea placeholder="Message" id="message"></textarea>
-      </div>
-      <div>
-        <input type="submit">
-      </div>
-    </form>
-  </div>
+
+<%= form_tag('/blogs',method: :post) do %>
+
+<input type="text" name="title">
+<input type="text" name="image">
+<textarea name="column"></textarea>
+<input type="submit">
+<% end %>
