--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,12 @@
+<% if user_signed_in? %>
+<%= link_to "ログアウト",destroy_user_session_path,class: 'delete' %>
+
+<% else %>
+<%= link_to "ログイン",new_user_session_path,class: 'post' %>
+<%= link_to "新規登録",new_user_registration_path,class: 'post' %>
+
+<% end %>
+
 <%= @blog.each do |blog| %>
 
 <p><%= blog.title %></p>
