--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,4 +1,5 @@
 <%= @blog.title %>
 <%= link_to "削除","/blogs/#{@blog.id}",method: :delete %>
+<%= link_to "編集","/blogs/#{@blog.id}/edit",method: :get %>
 
 <%= link_to "トップへ戻る",'/blogs',method: :get %>
