--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,24 @@
   </head>
 
   <body>
-    <header>
+    <header id="header" style="background-color:rgba(26,26,26,0.9); position:fixed; width:100%;">
 <ul class="nav justify-content-end">
   <% if user_signed_in? %>
   <li class="nav-item">
-    <%= link_to "ログアウト",destroy_user_session_path, class: "nav-link active",method: 'delete' %>
+    <%= link_to "ログアウト",destroy_user_session_path, class: "nav-link active",method: 'delete', style: "color:white;"%>
   </li>
   <li class="nav-item">
-    <%= link_to "#{current_user.nickname}","/users/#{current_user.id}",class: "nav-link",method: 'get' %>
+    <%= link_to "#{current_user.nickname}","/users/#{current_user.id}",class: "nav-link",method: 'get',style: "color:white;" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "投稿",'/blogs/new',class: "nav-link",method: 'get',style: "color:white;" %>
   </li>
   <% else %>
   <li class="nav-item">
-    <%= link_to "ログイン",new_user_session_path,class: "nav-link",method: 'post' %>
+    <%= link_to "ログイン",new_user_session_path,class: "nav-link",method: 'post',style: "color:white;" %>
   </li>
   <li class="nav-item">
-    <%= link_to "新規登録",new_user_registration_path,class: "nav-link",method: 'post' %>
+    <%= link_to "新規登録",new_user_registration_path,class: "nav-link",method: 'post',style: "color:white;" %>
   </li>
   <% end %>
 </ul>
