--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,7 +6,7 @@
     <div class="container">
       <h1 class="display-3">picblog</h1>
       <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-      <p><%= link_to "Sign up »",new_user_registration_path,class: "btn btn-primary btn-lg" %></p>
+      <p><%= link_to "Sign up »",new_user_registration_path,class: "btn btn-primary btn-lg", method: 'get'%></p>
     </div>
   </div>
 
@@ -21,7 +21,9 @@
               <p class="card-text"><%= blog.column %></p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to 'View details »',"/blogs/#{blog.id}",method: :get %></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary" href="/blogs/#{blog.id}">
+                    <%= link_to 'View details »',"/blogs/#{blog.id}",method: :get %>
+                  </button>
                 </div>
                 <small class="text-muted"><%= blog.user.nickname %></small>
               </div>
