--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<h2>Sign up</h2>
 
+<div class="text-center" style="padding-top:150px;">
+  <h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -26,9 +27,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+ <%= f.submit "Sign up",html: {class: "btn btn-lg btn-primary btn-block"} %>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+
+
