--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <%= link_to "ログイン",new_user_session_path,class: "nav-link",method: 'post',style: "color:white;" %>
   </li>
   <li class="nav-item">
-    <%= link_to "新規登録",new_user_registration_path,class: "nav-link",method: 'post',style: "color:white;" %>
+    <%= link_to "新規登録",new_user_registration_path,class: "nav-link",method: 'get',style: "color:white;" %>
   </li>
   <% end %>
 </ul>
