--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="mypage">
   <div class="profile-content">
     <div class="profile-image">
-      <a href= "" class="profile-info__edit-btn">edit</a>
+      <a href= "<%= edit_user_registration_path %>" class="profile-info__edit-btn">edit</a>
       <div class="profile-info__name-id">
         <h3><%= current_user.nickname %></h3>
       </div>
