--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -51,6 +51,7 @@
 .profile-info__edit-btn:active{
   border-bottom:solid 2px #fd9535;
   box-shadow:0 0 2px rgba(0,0,0,0.30);
+  text-decoration:none;
 }
 
 .profile-introduction{
