--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <header id="header" style="background-color:rgba(26,26,26,0.9); position:fixed; width:100%;">
+      <a href="/blogs" style="float:left; color:white; font-size:25px; padding-left:10px; text-decoration-style:none;">picblog</a>
 <ul class="nav justify-content-end">
   <% if user_signed_in? %>
   <li class="nav-item">
