--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -19,6 +19,7 @@
   height:300px;
   background-color:gray;
   position:relative;
+  border-radius:10px;
 }
 
 .profile-info__name-id{
@@ -57,7 +58,7 @@
 .profile-introduction{
   width:300px;
   height:170px;
-  border-bottom: solid 1px #d27d00;
+  border-bottom: solid 1px gray;
 }
 
 .right-content{
@@ -70,7 +71,7 @@
   display:block;
   width:800px;
   height:60px;
-  border-bottom: solid 1px #d27d00;
+  border-bottom: solid 1px gray;
   font-size:25px;
   line-height:60px;
   text-decoration:none;
