--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,27 @@
-<%= @blog.title %>
-<%= link_to "削除","/blogs/#{@blog.id}",method: :delete %>
-<%= link_to "編集","/blogs/#{@blog.id}/edit",method: :get %>
+<div class="blog-content">
+    <div class="blog-content__left">
+        <div class="blog-content__left-btn">
+          <%= link_to "TOP",'/blogs',method: :get,html: {class: "blog-content__left-btn"} %>
+        </div>
+      <% if user_signed_in? %>
+        <div class="blog-content__left-btn">
+          <%= link_to "削除","/blogs/#{@blog.id}",method: :delete,html: {class: "blog-content__left-btn"}  %>
+        </div>
+        <div class="blog-content__left-btn">
+          <%= link_to "編集","/blogs/#{@blog.id}/edit",method: :get,html: {class: "blog-content__left-btn"}  %>
+        </div>
+      <% end %>
+    </div>
+    <div class="blog-content__right">
+        <div class="blog-content__user">
+          <div class="blog-content__user__image"></div>
+          <h3><%= @blog.user.nickname %></h3>
+        </div>
+        <div class="blog-content__main">
+          <div class="blog-content__main__title">
+            <h1><%= @blog.title %></h1>
+          </div>
+        </div>
+    </div>
+</div>
 
-<%= link_to "トップへ戻る",'/blogs',method: :get %>
