--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -21,6 +21,9 @@
           <div class="blog-content__main__title">
             <h1><%= @blog.title %></h1>
           </div>
+          <div>
+            <% simple_format @blog.column %>
+          </div>
         </div>
     </div>
 </div>
