--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -17,7 +17,7 @@
 .profile-image{
   width:300px;
   height:300px;
-  background-color:gray;
+  background-color:rgba(117,117,117,0.2);
   position:relative;
   border-radius:10px;
 }
@@ -35,14 +35,14 @@
   width:60px;
   height:60px;
   border-radius:30px;
-  background-color:#fd9535;
+  background-color:rgba(117,117,117,0.5);
   position:absolute;
   top:230px;
   left:10px;
   padding:0.25em 0.5em;
   text-decoration:none;
   color:#FFF;
-  border-bottom: solid 2px #d27d00;
+  border-bottom: solid 2px rgba(117,117,117,0.8);
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.2),0 2px 2px rgba(0,0,0,0.19);
   font-weight:bold;
   text-align:center;
@@ -50,7 +50,7 @@
 }
 
 .profile-info__edit-btn:active{
-  border-bottom:solid 2px #fd9535;
+  border-bottom:solid 2px rgba(117,117,117,0.5);
   box-shadow:0 0 2px rgba(0,0,0,0.30);
   text-decoration:none;
 }
