--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,5 @@
 
 <main role="main">
-
-  <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron" >
     <div class="container">
       <h1 class="display-3">picblog</h1>
@@ -14,28 +12,11 @@
     <div class="container">
       <div class="row">
         <% @blog.each do |blog| %>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="<%= blog.image %>" class="bd-placeholder-img card-img-top"  >
-            <div class="card-body">
-              <p class="card-text"><%= blog.column %></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary" href="/blogs/#{blog.id}">
-                    <%= link_to 'View details »',"/blogs/#{blog.id}",method: :get %>
-                  </button>
-                </div>
-                <small class="text-muted"><%= blog.user.nickname %></small>
-              </div>
-            </div>
-          </div>
-        </div>
+            <%= render partial: "blog",locals:{blog: blog} %>
         <% end %>
        </div>
     </div>
 </div>
-
     <hr>
-  </div> <!-- /container -->
 </main>
 
