--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -21,8 +21,11 @@
           <div class="blog-content__main__title">
             <h1><%= @blog.title %></h1>
           </div>
-          <div>
-            <% simple_format @blog.column %>
+          <div class="key-vidual">
+            <img src="<%= @blog.image %>" class="key-vidual">
+          </div>
+          <div class="blog-content__main__column">
+            <p><%= markdown(@blog.column) %></p>
           </div>
         </div>
     </div>
