--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :user_image %><br />
+    <%= f.file_field :user_image, id: :user_image %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
