--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -15,6 +15,7 @@
             <%= render partial: "blog",locals:{blog: blog} %>
         <% end %>
        </div>
+       <%= paginate(@blog) %>
     </div>
 </div>
     <hr>
