--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -18,27 +18,21 @@
   width:300px;
   height:300px;
   background-color:rgba(117,117,117,0.2);
-  position:relative;
   border-radius:10px;
 }
 
 .profile-info__name-id{
   width:200px;
   height:60px;
-  position:absolute;
-  top:230px;
-  left:80px;
+  padding-top:10px;
 }
 
 .profile-info__edit-btn{
   display:inline-block;
-  width:60px;
-  height:60px;
-  border-radius:30px;
+  width:80px;
+  height:30px;
+  border-radius:10px;
   background-color:rgba(117,117,117,0.5);
-  position:absolute;
-  top:230px;
-  left:10px;
   padding:0.25em 0.5em;
   text-decoration:none;
   color:#FFF;
@@ -46,7 +40,8 @@
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.2),0 2px 2px rgba(0,0,0,0.19);
   font-weight:bold;
   text-align:center;
-  line-height:50px;
+  line-height:20px;
+  margin-top:10px;
 }
 
 .profile-info__edit-btn:active{
@@ -75,6 +70,8 @@
   font-size:25px;
   line-height:60px;
   text-decoration:none;
+  color:black;
+  padding-left:20px;
 }
 
 .my-blogs:hover{
