--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,20 +1,20 @@
 <div class="blog-content">
     <div class="blog-content__left">
         <div class="blog-content__left-btn">
-          <%= link_to "TOP",'/blogs',method: :get,html: {class: "blog-content__left-btn"} %>
+          <%= link_to "TOP",'/blogs',method: :get,html: {class: "blog-content__left-btn-el"} %>
         </div>
-      <% if user_signed_in? %>
+      <% if @blog.user_id == current_user.id%>
         <div class="blog-content__left-btn">
-          <%= link_to "削除","/blogs/#{@blog.id}",method: :delete,html: {class: "blog-content__left-btn"}  %>
+          <%= link_to "削除","/blogs/#{@blog.id}",method: :delete,html: {class: "blog-content__left-btn-el"}  %>
         </div>
         <div class="blog-content__left-btn">
-          <%= link_to "編集","/blogs/#{@blog.id}/edit",method: :get,html: {class: "blog-content__left-btn"}  %>
+          <%= link_to "編集","/blogs/#{@blog.id}/edit",method: :get,html: {class: "blog-content__left-btn-el"}  %>
         </div>
       <% end %>
     </div>
     <div class="blog-content__right">
         <div class="blog-content__user">
-          <div class="blog-content__user__image"></div>
+          <img src="<%= @blog.user.user_image %>" class="blog-content__user__image">
           <h3><%= @blog.user.nickname %></h3>
         </div>
         <div class="blog-content__main">
